# nsg

./: .gitignore  CMakeLists.txt
CUDA/: CMakeLists.txt
CUDA/include/: index_cuda.cuh  index_nd.h  index_nd_nsg.h
CUDA/lib/: CMakeLists.txt
CUDA/main/: profile_cuda_test.cu
CUDA/src/: index_cuda.cu  index_nd.cpp  index_nd_nsg.cpp
include/efanna2e/: index.h  index_nsg.h  neighbor.h
include/extras/: utils.h
scripts/: .create_nsg.sh.swp  .generate_fake_data.sh.swp  .generate_mod_data.sh.swp  .run_searching.sh.swp  create_nsg.sh  generate_fake_data.sh  generate_mod_data.sh  generate_true-k_NN.sh  get_latency-l.sh  get_precision-l.sh  pseudo_parallel-search.cpp  run_searching.sh  search_gist.sh  simple_profile.sh  simple_searching.sh  test_L.sh
src/: CMakeLists.txt  index.cpp  index_cuda.cu  index_nsg.cpp
tests/: CMakeLists.txt  app_search_in_batch.cpp  profile_batched_joint_traversal_search.cpp  profile_breakdown_optimized_searching.cpp  profile_cuda_test.cu  profile_gen_data.cpp  profile_graph_degree_distribution.cpp  profile_joint_traversal_search.cpp  profile_pair_queries.cpp  profile_parallel_optimized_search.cpp  profile_precision.bak.cpp  profile_precision.cpp  profile_reversed_nsg_index.cpp  profile_same_query_set.cpp  profile_save_NN.cpp  profile_search_on_recorded_trace.cpp  profile_search_shared_candidates.cpp  profile_search_shared_tops.cpp  profile_search_to_record_trace.cpp  test_change_data_vol_and_dim.cpp  test_nsg_index.cpp  test_nsg_optimized_search.cpp  test_nsg_search.cpp  test_precision.cpp  test_save_NN.cpp
